[project]
name = "31-rag-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "chromadb>=1.3.4",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.0.1",
    "langchain-huggingface>=1.0.1",
    "langchain-openai>=1.0.2",
    "langchainhub>=0.1.21",
    "pytube>=15.0.0",
    "sentence-transformers>=5.1.2",
    "tiktoken>=0.12.0",
    "youtube-transcript-api>=1.2.3",
]
